sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-safe Sprite representation.
 */
typedef struct FfiSprite {
    /**
     * Texture handle (index and generation packed as u64).
     */
    uint64_t texture_handle;
    /**
     * Color tint red component (0.0 - 1.0).
     */
    float color_r;
    /**
     * Color tint green component (0.0 - 1.0).
     */
    float color_g;
    /**
     * Color tint blue component (0.0 - 1.0).
     */
    float color_b;
    /**
     * Color tint alpha component (0.0 - 1.0).
     */
    float color_a;
    /**
     * Source rectangle X position (if has_source_rect is true).
     */
    float source_rect_x;
    /**
     * Source rectangle Y position.
     */
    float source_rect_y;
    /**
     * Source rectangle width.
     */
    float source_rect_width;
    /**
     * Source rectangle height.
     */
    float source_rect_height;
    /**
     * Whether source_rect is set.
     */
    bool has_source_rect;
    /**
     * Flip horizontally flag.
     */
    bool flip_x;
    /**
     * Flip vertically flag.
     */
    bool flip_y;
    /**
     * Explicit render-order layer.
     */
    int32_t z_layer;
    /**
     * Anchor point X (normalized 0-1).
     */
    float anchor_x;
    /**
     * Anchor point Y (normalized 0-1).
     */
    float anchor_y;
    /**
     * Custom size width (if has_custom_size is true).
     */
    float custom_size_x;
    /**
     * Custom size height.
     */
    float custom_size_y;
    /**
     * Whether custom_size is set.
     */
    bool has_custom_size;
} FfiSprite;
/**
 * Opaque texture handle for FFI.
 */
typedef uint64_t GoudTextureHandle;
/**
 * Loads a texture from an image file.
 */
GoudTextureHandle goud_texture_load(struct GoudContextId context_id, const char *path);
/**
 * Destroys a texture and releases its GPU resources.
 */
bool goud_texture_destroy(struct GoudContextId context_id, GoudTextureHandle texture);
/**
 * Draws a textured sprite at the given position.
 */
bool goud_renderer_draw_sprite(struct GoudContextId context_id, GoudTextureHandle texture, float x, float y, float width, float height, float rotation, float r, float g, float b, float a);
/**
 * Draws a colored quad (no texture) at the given position.
 */
bool goud_renderer_draw_quad(struct GoudContextId context_id, float x, float y, float width, float height, float r, float g, float b, float a);
/**
 * Begins a new rendering frame.
 */
bool goud_renderer_begin(struct GoudContextId context_id);
/**
 * Ends the current rendering frame.
 */
bool goud_renderer_end(struct GoudContextId context_id);
/**
 * Enables alpha blending for transparent sprites.
 */
void goud_renderer_enable_blending(struct GoudContextId context_id);
/**
 * Disables alpha blending.
 */
void goud_renderer_disable_blending(struct GoudContextId context_id);
/* === Input === */

/**
 * FFI-compatible key code.
 */
typedef int32_t GoudKeyCode;
/**
 * FFI-compatible mouse button code.
 */
typedef int32_t GoudMouseButton;
/**
 * Returns `true` if the specified key is currently pressed.
 */
bool goud_input_key_pressed(struct GoudContextId context_id, GoudKeyCode key);
/**
 * Returns `true` if the specified key was just pressed this frame.
 */
bool goud_input_key_just_pressed(struct GoudContextId context_id, GoudKeyCode key);
/**
 * Returns `true` if the specified key was just released this frame.
 */
bool goud_input_key_just_released(struct GoudContextId context_id, GoudKeyCode key);
/**
 * Returns `true` if the specified mouse button is currently pressed.
 */
bool goud_input_mouse_button_pressed(struct GoudContextId context_id, GoudMouseButton button);
/**
 * Returns `true` if the specified mouse button was just pressed this frame.
 */
bool goud_input_mouse_button_just_pressed(struct GoudContextId context_id, GoudMouseButton button);
/**
 * Returns `true` if the specified mouse button was just released this frame.
 */
bool goud_input_mouse_button_just_released(struct GoudContextId context_id, GoudMouseButton button);
/**
 * Gets the current mouse position in screen coordinates.
 */
bool goud_input_get_mouse_position(struct GoudContextId context_id, float *out_x, float *out_y);
/**
 * Creates a new sprite with the specified custom size (builder pattern).
 */
struct FfiSprite goud_sprite_with_custom_size(struct FfiSprite sprite, float width, float height);
/**
 * Checks if a point is inside a rectangle.
 */
bool goud_collision_point_in_rect(float point_x, float point_y, float rect_x, float rect_y, float rect_w, float rect_h);
/**
 * Fast check if two AABBs overlap (no contact info).
 */
bool goud_collision_aabb_overlap(float min_a_x, float min_a_y, float max_a_x, float max_a_y, float min_b_x, float min_b_y, float max_b_x, float max_b_y);
/* === Window === */

/**
 * Creates a new windowed context with the default native runtime.
 */
struct GoudContextId goud_window_create(uint32_t width, uint32_t height, const char *title);
/**
 * Destroys a windowed context and releases all resources.
 */
bool goud_window_destroy(struct GoudContextId context_id);
/**
 * Checks if the window should close.
 */
bool goud_window_should_close(struct GoudContextId context_id);
/**
 * Polls window events and updates input state.
 */
float goud_window_poll_events(struct GoudContextId context_id);
/**
 * Swaps the front and back buffers, presenting the rendered frame.
 */
void goud_window_swap_buffers(struct GoudContextId context_id);
/**
 * Sets whether the window should close.
 */
void goud_window_set_should_close(struct GoudContextId context_id, bool should_close);
/**
 * Gets the delta time from the last frame.
 */
float goud_window_get_delta_time(struct GoudContextId context_id);
/**
 * Clears the window with the specified color.
 */
void goud_window_clear(struct GoudContextId context_id, float r, float g, float b, float a);