sdks/python/goud_engine/bindings.py

    
    _lib.goud_sprite_with_custom_size.argtypes = [FfiSprite, c_float, c_float]
    _lib.goud_sprite_with_custom_size.restype = FfiSprite
    
    # Window functions
    _lib.goud_window_create.argtypes = [c_uint32, c_uint32, c_char_p]
    _lib.goud_window_create.restype = GoudContextId
    
    _lib.goud_window_destroy.argtypes = [GoudContextId]
    _lib.goud_window_destroy.restype = c_bool
    
    _lib.goud_window_should_close.argtypes = [GoudContextId]
    _lib.goud_window_should_close.restype = c_bool
    
    _lib.goud_window_set_should_close.argtypes = [GoudContextId, c_bool]
    _lib.goud_window_set_should_close.restype = None
    
    _lib.goud_window_poll_events.argtypes = [GoudContextId]
    _lib.goud_window_poll_events.restype = c_float
    
    _lib.goud_window_swap_buffers.argtypes = [GoudContextId]
    _lib.goud_window_swap_buffers.restype = None
    
    _lib.goud_window_clear.argtypes = [GoudContextId, c_float, c_float, c_float, c_float]
    _lib.goud_window_clear.restype = None
    
    _lib.goud_window_get_delta_time.argtypes = [GoudContextId]
    _lib.goud_window_get_delta_time.restype = c_float
    
    # Renderer functions
    _lib.goud_renderer_begin.argtypes = [GoudContextId]
    _lib.goud_renderer_begin.restype = c_bool
    
    _lib.goud_renderer_end.argtypes = [GoudContextId]
    _lib.goud_renderer_end.restype = c_bool
    
    _lib.goud_renderer_enable_blending.argtypes = [GoudContextId]
    _lib.goud_renderer_enable_blending.restype = None
    
    _lib.goud_renderer_disable_blending.argtypes = [GoudContextId]
    _lib.goud_renderer_disable_blending.restype = None
    
    # Texture functions
    _lib.goud_texture_load.argtypes = [GoudContextId, c_char_p]
    _lib.goud_texture_load.restype = c_uint64
    
    _lib.goud_texture_destroy.argtypes = [GoudContextId, c_uint64]
    _lib.goud_texture_destroy.restype = c_bool
    
    # Input functions
    _lib.goud_input_key_pressed.argtypes = [GoudContextId, c_int32]
    _lib.goud_input_key_pressed.restype = c_bool
    
    _lib.goud_input_key_just_pressed.argtypes = [GoudContextId, c_int32]
    _lib.goud_input_key_just_pressed.restype = c_bool
    
    _lib.goud_input_key_just_released.argtypes = [GoudContextId, c_int32]
    _lib.goud_input_key_just_released.restype = c_bool
    
    _lib.goud_input_mouse_button_pressed.argtypes = [GoudContextId, c_int32]
    _lib.goud_input_mouse_button_pressed.restype = c_bool
    
    _lib.goud_input_mouse_button_just_pressed.argtypes = [GoudContextId, c_int32]
    _lib.goud_input_mouse_button_just_pressed.restype = c_bool
    
    _lib.goud_input_mouse_button_just_released.argtypes = [GoudContextId, c_int32]
    _lib.goud_input_mouse_button_just_released.restype = c_bool
    
    _lib.goud_input_get_mouse_position.argtypes = [GoudContextId, POINTER(c_float), POINTER(c_float)]
    _lib.goud_input_get_mouse_position.restype = c_bool
    
    # Collision functions
    _lib.goud_collision_aabb_overlap.argtypes = [
        c_float, c_float, c_float, c_float,
        c_float, c_float, c_float, c_float
    ]
    _lib.goud_collision_aabb_overlap.restype = c_bool
    
    _lib.goud_collision_point_in_rect.argtypes = [
        c_float, c_float,
        c_float, c_float, c_float, c_float
    ]
    _lib.goud_collision_point_in_rect.restype = c_bool
    
    # Immediate-mode rendering functions
    _lib.goud_renderer_draw_sprite.argtypes = [
        GoudContextId, c_uint64,  # context, texture
        c_float, c_float, c_float, c_float,  # x, y, width, height
        c_float,  # rotation
        c_float, c_float, c_float, c_float  # r, g, b, a
    ]
    _lib.goud_renderer_draw_sprite.restype = c_bool
    
    _lib.goud_renderer_draw_quad.argtypes = [
        GoudContextId,
        c_float, c_float, c_float, c_float,  # x, y, width, height
        c_float, c_float, c_float, c_float  # r, g, b, a
    ]
    _lib.goud_renderer_draw_quad.restype = c_bool


# Initialize FFI signatures when module loads
_setup_ffi_signatures()
